--- a/src/app.css
+++ b/src/app.css
@@ -26,3 +26,24 @@
   height: 100%;
   border: 1px solid red;
 }
+
+.footer {
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+  background-color: #181A1C;
+}
+
+.footer .footer-left {
+  height: 100%;
+  width: 25%;
+  display: inline-block;
+  border-right: 1px solid #343536;
+}
+
+.footer .footer-right {
+  height: 100%;
+  width: 75%;
+  display: inline-block;
+}
