--- a/src/app.css
+++ b/src/app.css
@@ -3,9 +3,15 @@
   text-align: center;
 }
 
+.app .app-header {
+  font-size: 20px;
+  height: 70px;
+  line-height: 70px;
+  background-color: #0A5294;
+}
+
 .app .content-row {
-  height: 100%;
-  border: 1px solid black;
+  height: 94%;
 }
 
 .app .content-row.row {
@@ -22,9 +28,8 @@
 }
 
 .app .row .panel {
-  background-color: #1C262B;
+  background-color: #FFFFFF;
   height: 100%;
-  border: 1px solid red;
 }
 
 .footer {
@@ -32,14 +37,13 @@
   height: 80px;
   position: absolute;
   bottom: 0;
-  background-color: #181A1C;
+  background-color: #EDEDED;
 }
 
 .footer .footer-left {
   height: 100%;
   width: 25%;
   display: inline-block;
-  border-right: 1px solid #343536;
 }
 
 .footer .footer-right {
@@ -68,7 +72,7 @@
 
 .footer-left input {
   height: 80px;
-  background-color: black;
+  background-color: #EDEDED;
   border: none;
   color: #B8B8B8;
 }
