--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #1F2225;
+  background-color: white;
   color: white;
 }
 
@@ -11,11 +11,11 @@ html {
 }
 
 #root {
+  margin: 0;
+  padding: 0;
   height: 100%;
 }
 
 body {
-  border: 1px solid transparent;
   height: 100%;
-  min-height: 100%;
 }
