--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,6 +1,7 @@
 .sidebar {
   text-align: left;
-  padding-right: 5px;
+  padding-right: 0px;
+  background-color: #EFEFEF;
 }
 
 button {
@@ -29,27 +30,29 @@ button.white {
   color: #2EAC74;
 }
 
-.title {
+.sidebar .title {
   padding-top: 15px;
   padding-bottom: 15px;
   font-size: 20px;
-  color: #FF3500;
+  color: #09365E;
   font-weight: bold;
   padding-left: 15px;
+  border-bottom: 1px solid #A5A7A8;
 }
 
 .chats {
   list-style: none;
-  padding-left: 15px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .chat {
   margin-bottom: 5px;
-}
-
-.spliter {
-  font-weight: bold;
-  font-size: 20px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  padding-top: 5px;
+  border-bottom: 1px solid #A5A7A8;
+  padding-right: 5px;
 }
 
 .chat .sender-name {
@@ -59,6 +62,10 @@ button.white {
 .chat .sender-name .timestamp {
   color: #B8B8B8;
   float: right;
+}
+
+.chat .content {
+  color: #838383;
 }
 
 .chat.bot {
