--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: white;
+  background-color: #E8E9E8;
   color: white;
 }
 
